feat: add new feat to guava poc